--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,7 +1,9 @@
 name: buildfork
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -30,6 +32,22 @@ jobs:
           name: build
           path: build
           
-
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: production
+      url: http://melted-chickens.surge.sh
+    steps:
+      - name: download the build artifact
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: build
+      - name: deploy to surge
+        run: npx surge --project '.' --domain melted-chickens.surge.sh
+        env:
+          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+          
 
           
